# Quant-Strategy

Quant_Strategy/: pyproject.toml
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/: README.md  main.py  pyproject.toml
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/data/master/: master_db.xlsx
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/data/pipeline/: calendar.py  fundamental_ratios.py  indices_prices.py  master_universe.py  run_pipeline.py  sector_industry.py  stock_prices_KITE_with_multithread.py  stock_prices_KITE_without_multithread.py  stocks_prices.py
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/data/processed/: fundamental_ratios.parquet
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/data/processed/calendar/: trading_days_future.parquet  trading_days_past.parquet  trading_days_price.parquet
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/data/raw/: BookValue.xlsx  EBITDA.xlsx  EPS.xlsx  Indices.xlsx  ROA.xlsx  ROCE.xlsx  ROE.xlsx  RevenuePerShare.xlsx  tmi.json  unique_tickers.xlsx
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/factors/: momentum.py  quality.py  value.py
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/optimization/: optimization.py
Quant_Strategy/5. Data & Stock Generation/5. Data & Stock Generation/signals/: generator.py
