[project]
name = "aa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.48",
    "bs4>=0.0.2",
    "cvxpy>=1.7.3",
    "fastparquet>=2025.12.0",
    "googlesearch-python>=1.3.0",
    "httplib2>=0.31.0",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.1",
    "plotly>=6.5.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.36.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
    "xlsxwriter>=3.2.9",
    "yfinance>=0.2.66",
]
