[project]
name = ""
version = "0.1.0"
description = "yash chinchole"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.5",
    "dotenv>=0.9.9",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.2.4",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
    "xlsxwriter>=3.2.9",
    "yfinance>=1.0",
]
